--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section class="card">
       <h3>Support</h3>
-      <p>Email: <a href="mailto:support@yourdomain.com">support@yourdomain.com</a></p>
+      <p>Email: <a href="mailto:mihailx138@gmail.com">mihailx138@gmail.com</a></p>
       <p>For billing questions and refunds, see our <a href="refund.html">Refund Policy</a>.</p>
     </section>
   </main>
