--- a/privacy.html
+++ b/privacy.html
@@ -33,7 +33,7 @@
   <p>You may delete the extension data at any time by removing the extension or clearing browser storage. For billing data, contact the payment provider.</p>
 
   <h2>6. Contact</h2>
-  <p><a href="mailto:support@yourdomain.com">support@yourdomain.com</a></p>
+  <p><a href="mailto:mihailx138@gmail.com">mihailx138@gmail.com</a></p>
 
   <p><a href="index.html">← Back to home</a></p>
 </body>
