--- a/refund.html
+++ b/refund.html
@@ -27,7 +27,7 @@
   </ul>
 
   <h2>4. How to Request</h2>
-  <p>Send your order email and reason to <a href="mailto:support@yourdomain.com">support@yourdomain.com</a>. Refunds are processed to the original payment method (via Paddle/PayPal) when approved.</p>
+  <p>Send your order email and reason to <a href="mailto:mihailx138@gmail.com">mihailx138@gmail.com</a>. Refunds are processed to the original payment method (via Paddle/PayPal) when approved.</p>
 
   <h2>5. Subscriptions</h2>
   <p>You may cancel at any time to stop future charges. We do not offer pro-rated refunds unless required by law.</p>
