--- a/terms.html
+++ b/terms.html
@@ -42,7 +42,7 @@
   <p>We may suspend or terminate access for violations of these Terms.</p>
 
   <h2>10. Contact</h2>
-  <p>Questions? <a href="mailto:support@yourdomain.com">support@yourdomain.com</a></p>
+  <p>Questions? <a href="mailto:mihailx138@gmail.com">mihailx138@gmail.com</a></p>
 
   <p><a href="index.html">← Back to home</a></p>
 </body>
